crates/wyrd-for-games/tests/ui/weave_invalid_endpoint.stderr
error: no rules expected `[`
  --> tests/ui/weave_invalid_endpoint.rs:11:19
   |
11 |             source["out"] -> sink.in;
   |                   ^ no rules expected this token in macro call
   |
note: while trying to match `.`
  --> src/authoring/macros.rs
   |
   |         $from:ident . out($from_export:expr) ->
   |                     ^
